--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.4.2",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "mustache": "^4.0.0",
+    "mustache-express": "^1.3.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
+    "popper.js": "^1.16.1",
     "stimulus": "^1.1.1",
+    "style-loader": "^1.1.3",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.41.5",
     "webpack-dev-middleware": "^3.7.2"
   }
