--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
     "mustache": "^4.0.0",
     "mustache-express": "^1.3.0",
     "node-fetch": "^2.6.0",
